# Owl-C-Compiler

./: .gitignore  CMakeLists.txt  README.md  owl-c
src/: lexer.cpp  lexer.h  main.cpp  token.h
tests/: code_tester  code_tester.cpp  code_tester_lexer.cpp
